tests/miniJava/neg/006913_mutation.MiniJava
System.out.println java { public static void Main ( String [ ] java ) { { } } }
